# OpenCV_Tutorials

./: CMakeLists.txt  README.md
BlendTwoImages/: CMakeLists.txt  main.cpp
ChangingContrastAndBrightness/: CMakeLists.txt  main.cpp
ErosionDelation/: CMakeLists.txt  main.cpp
Extract_Vertical_Horizontal_Lines/: CMakeLists.txt  main.cpp
FaceRecognition/: CMakeLists.txt
GaussianBlurMedianBilateralFilter/: CMakeLists.txt  main.cpp
Hit_or_Miss/: CMakeLists.txt  main.cpp
MaskOperationsOnMatrices/: CMakeLists.txt  main.cpp
OpeningClosingTopBlackHat/: CMakeLists.txt  main.cpp
Piramids/: CMakeLists.txt  main.cpp
ScanImagesLookupTablesTimeMeasurement/: CMakeLists.txt  main.cpp
ShowImage/: CMakeLists.txt  main.cpp
SimpleDrawing/: CMakeLists.txt  main.cpp
Sobel/: CMakeLists.txt  main.cpp
SobelDerivatives/: CMakeLists.txt  main.cpp
Thresholding_Operations/: CMakeLists.txt  main.cpp
